--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -3524,5 +3524,9 @@
 
     <!-- Component name for default assistant on this device -->
     <string name="config_defaultAssistantComponentName"></string>
+	
+    <!-- Full screen aspect ratio -->
+    <bool name="config_haveHigherAspectRatioScreen">false</bool>
+    <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
 
 </resources>
